--- a/src/data/levels/04_Memory/02_Devices/chat/en.yml
+++ b/src/data/levels/04_Memory/02_Devices/chat/en.yml
@@ -19,7 +19,7 @@ main:
 
 who:
   messages:
-  - when a game is loaded, <BrokenNEEES> will call this method automatically ✨
+  - when a game is loaded, BrokenNEEES will call this method automatically ✨
   - so that the memory has access to the rest of the hardware
   responses:
   - ...main
@@ -29,7 +29,7 @@ mapper:
   - <mappers> are circuits inside the cartridge that control how the ROM data is read by the console
   - each game uses a specific mapper
   - the more mappers your emulator supports, the more games are compatible 👾
-  - <BrokenNEEES> supports the most common mappers (0-4)
+  - BrokenNEEES supports the most common mappers (0-4)
   - surprisingly, they all work! 🤯  so you'll be using those for now
   - and you'll learn how to add more in the 🗜️  Mappers chapter
   responses:
