Unhighlighting PRG-ROM, CHR-ROM, CHR-RAM and PRG-RAM; since they'll have dictionary entries

--- a/src/data/levels/01_Getting started/03_Architecture/chat/es.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/es.yml
@@ -32,7 +32,7 @@ thecode:
     {{Right}}.load("cartridge.png");
   messages:
   - ¡en el cartucho!
-  - específicamente, en un chip llamado 🤖  <PRG-ROM> (Program ROM)
+  - específicamente, en un chip llamado 🤖  PRG-ROM (Program ROM)
   responses:
   - ...main
 
@@ -53,7 +53,7 @@ thegraphics:
     {{Right}}.load("cartridge.png");
   messages:
   - ¡en el cartucho! :)
-  - específicamente, en un chip llamado 👾  <CHR-ROM> (Character ROM)
+  - específicamente, en un chip llamado 👾  CHR-ROM (Character ROM)
   responses:
   - ...main
 
