--- a/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
+++ b/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - necesitamos acceder al código del programa fácilmente 🤖
-  - 📚  _-_crea un método ```javascript prg()``` que retorne un `Uint8Array` con los bytes de <PRG-ROM>_--_
+  - 📚  _-_crea un método ```javascript prg()``` que retorne un `Uint8Array` con los bytes de PRG-ROM_--_
   - _-_el código está justo después de la cabecera de 16 bytes, pero recuerda que podrías tener que omitir 512 bytes si la cabecera lo indica_--_
   - <{prg.png}>
   responses:
