--- a/src/data/levels/03_Cartridge/07_Integrating our work/chat/en.yml
+++ b/src/data/levels/03_Cartridge/07_Integrating our work/chat/en.yml
@@ -6,7 +6,7 @@ main:
   messages:
   - our 💾  Cartridge is complete!
   - that means, I can now patch your code so that BrokenNEEES uses your implementation
-  - and we'll at least get rid of the broken <CHR-ROM> bug 🐞
+  - and we'll at least get rid of the broken CHR-ROM bug 🐞
   - are you ready?
   responses:
   - sure, I wanna try it! [tryit]
