--- a/src/data/levels/05b_PPU/03_Graphics/chat/es.yml
+++ b/src/data/levels/05b_PPU/03_Graphics/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - un tile es una cuadrícula de 8x8 píxeles
   - <{tile_grayscale.png;8x8}>
   - ¡y 8x8 es un tamaño realmente pequeño! así que un tile generalmente representa una parte de una imagen más grande
-  - todos están almacenados en la 👾  <CHR-ROM> (o <CHR-RAM>) del cartucho
+  - todos están almacenados en la 👾  CHR-ROM (o CHR-RAM) del cartucho
   - <{tiles_grayscale.png;30x30}>
   responses:
   - ¿y qué hay de los colores? 🌈 [colors]
@@ -55,7 +55,7 @@ enough:
   - 🏞️  hay una imagen de <fondo>
   - 🛸  hay múltiples <sprites>
   - 🕊️  ambos usan <tiles> para renderizar
-  - 👾  todos los tiles están en <CHR-ROM> o <CHR-RAM>, sin color
+  - 👾  todos los tiles están en CHR-ROM o CHR-RAM, sin color
   - 🎨  el color se da a través de <paletas>
   - 👑 🎨  las paletas hacen referencia a entradas de una <paleta maestra> de 64 colores fijos
   - "escribiré sobre esto, con más detalles, aquí: 📄  /docs/ppu/definitions.es.md"
