--- a/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
+++ b/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
@@ -11,7 +11,7 @@ main:
 cut:
   messages:
   - todos los arrays tienen un método `slice(start, end)` 🍕
-  - extrae un sub-array de `start` a `end`-1
+  - extrae un sub-array de `start` a `end-1`
   - "p. ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
   - (no incluye el elemento del índice 3, "d")
   responses:
@@ -20,5 +20,7 @@ cut:
 morehelp:
   messages:
   - recuerda, el segundo argumento es el índice <final>, no una longitud
-  - si quieres 30 bytes, empezando por el byte 5, necesitas escribir ```javascript array.slice(5, 5 + 30)```
+  - |-
+    si quieres 30 bytes, empezando por el byte 5, necesitas escribir
+      ```javascript array.slice(5, 5 + 30)```
   responses: []
